--- a/package.json
+++ b/package.json
@@ -16,12 +16,13 @@
     "clsx": "^2.0.0",
     "convex": "^1.3.1",
     "lucide-react": "^0.286.0",
-    "next": "13.5.5",
+    "next": "14.0.0",
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^1.14.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "usehooks-ts": "^2.9.1"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -29,7 +30,7 @@
     "@types/react-dom": "^18",
     "autoprefixer": "^10",
     "eslint": "^8",
-    "eslint-config-next": "13.5.5",
+    "eslint-config-next": "14.0.0",
     "postcss": "^8",
     "tailwindcss": "^3",
     "typescript": "^5"
